deployments/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /   # Rewrite target for path routing
spec:
  ingressClassName: nginx
  rules:
    - host: shanitests
      http:
        paths:
          - path: /hello-world
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
---
